--- a/css/category-main.css
+++ b/css/category-main.css
@@ -34,9 +34,11 @@ main{
 .caption{
   display: inline-block;
   width: 100%;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
+  font-weight: 100;
   color: #2201f9;
-  margin: 50px;
+  margin: 10px 50px;
   padding: 10px;
 }
 #summary-link{
