caption font weight adjusted on small screen

--- a/css/category-main.css
+++ b/css/category-main.css
@@ -78,6 +78,7 @@ main{
   .summary .caption{
     padding: 20px;
     font-size: 20px;
+    font-weight: 500;
   }
   .summary video{
     width: 100%;
