--- a/css/single-view.css
+++ b/css/single-view.css
@@ -31,6 +31,11 @@ main{
 #video{
   justify-content: center;
   width: 76%;
+  min-height: 400px;
+}
+#image{
+  justify-content: center;
+  width: 76%;
   height: 400px;
 }
 #write-up{
@@ -42,4 +47,27 @@ main{
 }
 .paragraph{
   padding: 10px;
+}
+@media(max-width: 769px){
+  #single-view-main{
+    width: 100%;
+  }
+  #video-container{
+    padding: 10px;
+    width: 100%;
+    height: auto;
+  }
+  #video{
+    width: 100%;
+    min-height: 250px;
+  }
+  #image{
+    width: 100%;
+    height: auto;
+  }
+  #write-up{
+    padding: 20px 5px;
+    font-weight: 300;
+    font-size: 20px;
+  }
 }
