--- a/css/header.css
+++ b/css/header.css
@@ -137,6 +137,12 @@ div img {
 .current-slide-icon{
   background-color: #fff;
 }
+.modal{
+  display: none;
+}
+#modal-background .news-categories-mobile .news-cat-container{
+  display: none;
+}
 @media(max-width: 1000px){
   body{
     position: relative;
@@ -152,35 +158,45 @@ div img {
   hr{
     display: none;
   }
-  header #navbar #news-categories .news-cat-container{
+  header #navbar #news-categories{
     display: none;
   }
-  header #navbar #news-categories .open-news-categories{
+ body #modal-background .news-categories-mobile .open-news-categories-mobile{
     display: flex;
     flex-direction: column;
     position: fixed;
-    width: 70%;
-    margin-top: 100px;
-    /* left: 30%; */
-    background-color: rgba(255, 255, 255, 0.9);
+    width: 50%;
+    padding-top: 100px;
+    left: 0%;
+    top: 0;
+    color: #2201f9;
+    background-color: #f2f0fe;
     text-align: left;
-    height: 65vh;
+    height: 100vh;
     z-index: 5;
     animation: nav-slide 0.5s ease-in;
   }
   @keyframes nav-slide {
     0%{
-      left: 100%
+      left: -100%
     }
     100%{
-      left: 30%;
+      left: 0%;
     }
   }
-  header #navbar #news-categories a{
-    margin: 10px 5px;
-    padding: 30px;
-    color: #2201f9;
+  body #modal-background .news-categories-mobile .open-news-categories-mobile li{
+    list-style: none;
+    padding: 5px;
+    margin: 5px;
   }
+  body #modal-background .news-categories-mobile .open-news-categories-mobile li a{
+    color: #2201f9;
+    padding: 20px;
+    font-size: 1.5rem;
+    font-weight: 800;
+    padding-left: 20px;
+  }
+
   #search{
     width: 50%;
     align-self: center;
@@ -200,6 +216,14 @@ div img {
     display: block;
     color: #2201f9;
     align-self: center;
+    font-size: 30px;
+  }
+  .close{
+    display: block;
+    position: absolute;
+    color: #fff;
+    top: 3%;
+    right: 10%;
     font-size: 30px;
   }
   #logo{
@@ -224,16 +248,24 @@ div img {
   #subject{
     padding: 20px;
   }
-  .modal-background{
+  body .modal-background{
+    display: block;
     position: fixed;
+    top: 0;
     height: 100vh;
     width: 100vw;
-    background-color: rgba(0, 0, 0, 0.6);
-    z-index: 2;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 6;
+  }
+  body #modal-background .news-categories-mobile .open-news-categories-mobile li a:hover{
+    color: #fff;
+    background-color: #2201f9;
   }
 }
 @media(max-width: 550px){
-  
+  body #modal-background .news-categories-mobile .open-news-categories-mobile{
+    width: 70%;
+  }
   #top-stories{
     display: none;
     height: 40vh;
