--- a/css/header.css
+++ b/css/header.css
@@ -51,11 +51,6 @@ div img {
   color: #2201f9;
   margin: 0 10px;
 }
-#news-categories #news-list-container a:hover{
-  background-color: #2201f9;
-  color: #fff;
-  padding: 10px 0;
-}
 #nav-border{
   border: #2201f9 solid 1px;
 }
@@ -161,19 +156,25 @@ div img {
   header #navbar #news-categories{
     display: none;
   }
+  #modal-background .news-categories-mobile ul li{
+    min-width: 80%;
+    border: #2201f9 solid 2px;
+  }
  body #modal-background .news-categories-mobile .open-news-categories-mobile{
     display: flex;
     flex-direction: column;
     position: fixed;
     width: 50%;
-    padding-top: 100px;
+    /* padding-top: 100px; */
+    justify-content: center;
+    align-items: center;
     left: 0%;
     top: 0;
     color: #2201f9;
     background-color: #f2f0fe;
     text-align: left;
     height: 100vh;
-    z-index: 5;
+    z-index: 7;
     animation: nav-slide 0.5s ease-in;
   }
   @keyframes nav-slide {
@@ -192,11 +193,20 @@ div img {
   body #modal-background .news-categories-mobile .open-news-categories-mobile li a{
     color: #2201f9;
     padding: 20px;
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     font-weight: 800;
     padding-left: 20px;
   }
-
+  .news-categories-mobile #news-list-container-mobile{
+    height: 100%;
+  }
+  #void{
+    position: absolute;
+    width: 50%;
+    left: 50%;
+    top: 0;
+    height: 100vh;
+  }
   #search{
     width: 50%;
     align-self: center;
@@ -257,14 +267,21 @@ div img {
     background-color: rgba(0, 0, 0, 0.8);
     z-index: 6;
   }
-  body #modal-background .news-categories-mobile .open-news-categories-mobile li a:hover{
-    color: #fff;
+  #modal-background .news-categories-mobile ul li:hover{
     background-color: #2201f9;
+    color: #fff;
+  }
+  #modal-background .news-categories-mobile ul li a:hover{
+    color: #fff;
   }
 }
 @media(max-width: 550px){
   body #modal-background .news-categories-mobile .open-news-categories-mobile{
     width: 70%;
+  }
+  #void{
+    width: 30%;
+    left: 70%;
   }
   #top-stories{
     display: none;
