--- a/css/header.css
+++ b/css/header.css
@@ -158,6 +158,7 @@ div img {
   }
   #modal-background .news-categories-mobile ul li{
     min-width: 80%;
+    max-width: 90%;
     border: #2201f9 solid 2px;
   }
  body #modal-background .news-categories-mobile .open-news-categories-mobile{
@@ -193,7 +194,7 @@ div img {
   body #modal-background .news-categories-mobile .open-news-categories-mobile li a{
     color: #2201f9;
     padding: 20px;
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     font-weight: 800;
     padding-left: 20px;
   }
