--- a/css/header.css
+++ b/css/header.css
@@ -194,7 +194,7 @@ div img {
   body #modal-background .news-categories-mobile .open-news-categories-mobile li a{
     color: #2201f9;
     padding: 20px;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     font-weight: 800;
     padding-left: 20px;
   }
@@ -232,10 +232,11 @@ div img {
   .close{
     display: block;
     position: absolute;
-    color: #fff;
+    color: #2201f9;
     top: 3%;
-    right: 10%;
+    left: 10%;
     font-size: 30px;
+    z-index: 10;
   }
   #logo{
     align-self: center;
