--- a/css/header.css
+++ b/css/header.css
@@ -166,7 +166,7 @@ div img {
     flex-direction: column;
     position: fixed;
     width: 50%;
-    /* padding-top: 100px; */
+    padding: 50px 0;
     justify-content: center;
     align-items: center;
     left: 0%;
@@ -321,5 +321,14 @@ div img {
     margin: 30px auto;
     text-align: center;
     width: 100%;
+  }
+}
+@media(max-height:438px){
+  .close{
+    color: #fff;
+    top: 3%;
+    left: 90%;
+    font-size: 30px;
+    z-index: 10;
   }
 }
