--- a/css/footer.css
+++ b/css/footer.css
@@ -10,7 +10,7 @@ footer{
   display: flex;
   flex-direction: column;
   justify-content: center;
-  text-align: center;
+  /* text-align: center; */
   width: 100%;
 }
 #anf-tv-ads{
@@ -72,16 +72,22 @@ a{
   #center-icon{
     width: 30%;
   }
+  #footer-nav #left-p{
+    width: 50%;
+  }
+  #footer-nav #left-p .footer-p-link{
+    text-align: left;
+  }
 }
 @media(max-width: 500px){
   #center-icon{
     display: none;
   }
   .footer-p{
-    font-size: 15px;
+    font-size: 13px;
   }
   #footer-nav{
-    max-width: 100vh;
+    max-width: 100vw;
   }
 
 }
