--- a/css/single-view.css
+++ b/css/single-view.css
@@ -21,7 +21,7 @@ main{
   justify-content: center;
   flex-direction: column;
   background-color: #2201f91a;
-  margin: 70px auto 10px auto;
+  margin: 110px auto 10px auto;
 }
 #video-container{
   width: 95%;
@@ -57,6 +57,7 @@ main{
 @media(max-width: 769px){
   #single-view-main{
     width: 100%;
+    margin: 50px auto 10px auto;
   }
   #video-container{
     padding: 10px;
@@ -75,5 +76,9 @@ main{
     padding: 20px 5px;
     font-weight: 300;
     font-size: 20px;
+  }
+  #news-header{
+    padding: 20px;
+    font-size: 1.5rem;
   }
 }
