--- a/css/add-news.css
+++ b/css/add-news.css
@@ -11,21 +11,33 @@
 }
 #form-section{
   background-color: #2201f91e;
-  margin: 110px auto 50px auto;
-  padding: 50px;
-  width: 70%;
+  margin: 90px auto 50px auto;
+  padding: 20px 50px;
+  width: 50%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 #form{
   width: 90%;
-  margin: 50px;
+  margin: 10px;
 }
 #form-header{
   color: #2201f9;
   text-align: center;
-  font-size: 2rem;
+  font-size: 1.2rem;
+}
+#response{
+  color: red;
+  font-size: 1.05rem;
+  font-weight: 500;
+  font-family: Arial, Helvetica, sans-serif;
+  top: 10px;
+  margin: 10px auto;
+  width: 100%;
+  height: 30px;
+  text-align: center;
 }
 #form-section #form input{
   width: 100%;
@@ -34,61 +46,50 @@
   color: #000;
   border-radius: 5px;
   text-align: left;
-  padding: 10px;
-  font-size: 1.3rem;
-  margin: 10px 0;
+  padding: 5px;
+  font-size: 1rem;
+  font-weight: 500;
+  margin: 5px 0;
 }
 #checkboxes{
   display: flex;
   width: 100%;
   justify-content: center;
   align-items: center;
+  /* background-color: red; */
 }
 #checkboxes input{
   width: 20px;
   height: 20px;
 }
 #checkboxes label{
-  font-size: 1.5rem;
+  font-size: 1.1rem;
   width: 100%;
   color: #2201f9;
   /* background-color: red; */
 }
-#form-section #image{
+#form-section #media{
   display: flex;
   justify-content: center;
   align-items: center;
 }
-#form-section #video{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-#form-section #image label{
+#form-section #media label{
   width: 20%;
   font-size: 1.5rem;
   color: #2201f9;
 }
-#form-section #image input{
-  width: 80%;
-}
-#form-section #video label{
-  width: 20%;
-  font-size: 1.5rem;
-  color: #2201f9;
-}
-#form-section #video input{
+#form-section #media input{
   width: 80%;
 }
 #content{
   min-width: 100%;
   max-width: 100%;
-  min-height: 200px;
-  font-size: 1.2rem;
+  min-height: 150px;
+  font-size: 1rem;
   border-radius: 5px;
-  padding: 10px;
+  padding: 5px;
   border: #2201f9 1px solid;
-  margin: 20px auto;
+  margin: 10px auto;
 }
 #submit-container{
   width: 100%;
@@ -100,7 +101,7 @@ form #submit-container #add-news-submit{
   min-width: 100px;
   background-color: #2201f9;
   color: #fff;
-  font-weight: 700;
+  font-weight: 500;
   border: none;
   cursor: pointer;
 }
@@ -115,12 +116,27 @@ form #submit-container #add-news-submit{
     padding: 0;
   }
   #form-section #form input{
-    font-size: 1rem;
+    font-size: 15px;
   }
   #form-section #form label{
-    font-size: 1.2rem;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
   }
   #form-header{
-    font-size: 1.5rem;
+    font-size: 1rem;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  #form-section #media{
+    flex-direction: column;
+  }
+  #form-section #media input{
+    width: 100%;
+  }
+  #form-section #media label{
+    align-self: flex-start;
+  }
+  #checkboxes{
+    flex-direction: column;
+    justify-content: flex-start;
   }
 }
