--- a/css/header.css
+++ b/css/header.css
@@ -103,6 +103,23 @@ div img {
   width: 50%;
   height: 100%;
 }
+#user{
+  position: fixed;
+  top: 10%;
+  right: 5%;
+  padding: 20px 0;
+  text-align: right;
+  color: #2201f9;
+  /* background-color: #2201f9; */
+}
+#user summary{
+  /* list-style: none; */
+  cursor: pointer;
+}
+#user p{
+  margin: 10px auto 10px 0px;
+  cursor: pointer;
+}
 #subject{
   color: white;
   width: 100%;
@@ -148,6 +165,7 @@ div img {
   #navbar{
     width: 100vw;
     position: static;
+    padding-top: 20px;
     flex-direction: row-reverse;
     background-color: #2201f90e;
   }
@@ -162,7 +180,10 @@ div img {
     max-width: 90%;
     border-bottom: #2201f9 solid 1px;
   }
-
+  #user{
+    top: 8%;
+    position: absolute;
+  }
  body #modal-background .news-categories-mobile .open-news-categories-mobile{
     display: flex;
     flex-direction: column;
@@ -232,7 +253,7 @@ div img {
     display: block;
     color: #2201f9;
     align-self: center;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
   }
   .close{
     display: block;
@@ -240,12 +261,12 @@ div img {
     color: #2201f9;
     top: 3%;
     left: 10%;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     z-index: 10;
   }
   #logo{
     align-self: center;
-    width: 15%;
+    width: 10%;
   }
   #subject{
     font-size: 1.5rem;
@@ -282,13 +303,26 @@ div img {
     color: #fff;
   }
 }
+@media (max-width: 860px){
+  #user{
+    top: 7%;
+    position: absolute;
+  }
+}
 @media(max-width: 550px){
   body #modal-background .news-categories-mobile .open-news-categories-mobile{
     width: 70%;
   }
+  #user{
+    top: 7%;
+    position: absolute;
+  }
   #void{
     width: 30%;
     left: 70%;
+  }
+  #logo{
+    width: 15%;
   }
   #top-stories{
     display: none;
@@ -338,5 +372,8 @@ div img {
     left: 90%;
     font-size: 30px;
     z-index: 10;
+  }
+  #hamburger{
+    font-size: 30px;
   }
 }
