--- a/css/add-news.css
+++ b/css/add-news.css
@@ -5,6 +5,47 @@
   margin: 0;
   box-sizing: border-box;
 }
+body{
+  position: relative;
+  padding: 0;
+  max-width: 100%;
+  overflow-x: hidden;
+}
+#preview-buttons{
+  display: none;
+}
+#preview-buttons button{
+  background-color: #2201f9;
+  border: none;
+  padding: 10px;
+  color: #fff;
+  border-radius: 5%;
+  margin: 10px;
+  font-size: large;
+  cursor: pointer;
+}
+.preview-back{
+  position: absolute;
+  width: 100%;
+  min-height: 100vh;
+  background-color: #00000073;
+  z-index: 6;
+  height: 100%;
+  margin: 0;
+}
+.preview{
+  position: absolute;
+  background-color: #fff;
+  height: fit-content;
+  border: 5px solid #2201f9;
+  border-radius: 2%;
+  width: 60%;
+  z-index: 5;
+  top: 5%;
+  left: 20%;
+  margin: 20px 0;
+  padding: 50px;
+}
 #add-news-main{
   width: 100vw;
   font-family: 'Acme', sans-serif;
@@ -38,6 +79,13 @@
   width: 100%;
   height: 30px;
   text-align: center;
+}
+#response2{
+  display: none;
+  color: red;
+  text-align: center;
+  padding: 10px;
+  /* height: 40px; */
 }
 #form-section #form input{
   width: 100%;
@@ -106,6 +154,13 @@ form #submit-container #add-news-submit{
   cursor: pointer;
 }
 @media (max-width: 860px){
+  .preview{
+    border: 2px solid #2201f9;
+    border-radius: 2%;
+    width: 100%;
+    left: 0;
+    padding: 20px;
+  }
   #form-section{
     width: 98%;
     margin: 50px auto 50px auto;
