--- a/css/admin-login.css
+++ b/css/admin-login.css
@@ -8,8 +8,33 @@
 body{
   font-family: 'Acme', sans-serif;
   background-repeat: no-repeat;
-  background-image: url("https://source.unsplash.com/random");
+  /* background-image: url("https://source.unsplash.com/random"); */
   background-size: cover;
+}
+.modal-back{
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.651);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.modal-on{
+  position: absolute;
+  min-height: 150px;
+  min-width: 250px;
+  background-color: #fff;
+  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: green;
+  text-align: center;
+  justify-self: center;
+  align-self: center;
+  padding: 50px;
+}
+.modal-off{
+  display: none;
 }
 #form-container{
   width: 100%;
@@ -33,9 +58,9 @@ form{
   border-radius: 5px;
 }
 #response{
-  color: #fff;
-  font-size: 1.05rem;
-  font-weight: 500;
+  color: rgb(255, 77, 77);
+  font-size: 1rem;
+  font-weight: 600;
   font-family: Arial, Helvetica, sans-serif;
   top: 10px;
   margin: 10px auto;
