--- a/css/header.css
+++ b/css/header.css
@@ -8,6 +8,32 @@
 #hamburger{
   display: none;
 }
+.modal-back{
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.651);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 8;
+}
+.modal-on{
+  position: absolute;
+  min-height: 150px;
+  min-width: 250px;
+  background-color: #fff;
+  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: green;
+  text-align: center;
+  justify-self: center;
+  align-self: center;
+  padding: 50px;
+}
+.modal-off{
+  display: none;
+}
 header{
   font-family: 'Acme', sans-serif;
 }
