--- a/css/add-news.css
+++ b/css/add-news.css
@@ -19,7 +19,7 @@ body{
   border: none;
   padding: 10px;
   color: #fff;
-  border-radius: 5%;
+  border-radius: 1%;
   margin: 10px;
   font-size: large;
   cursor: pointer;
@@ -37,8 +37,8 @@ body{
   position: absolute;
   background-color: #fff;
   height: fit-content;
-  border: 5px solid #2201f9;
-  border-radius: 2%;
+  /* border: 5px solid #2201f9;
+  border-radius: 2%; */
   width: 60%;
   z-index: 5;
   top: 5%;
@@ -155,8 +155,8 @@ form #submit-container #add-news-submit{
 }
 @media (max-width: 860px){
   .preview{
-    border: 2px solid #2201f9;
-    border-radius: 2%;
+    /* border: 2px solid #2201f9;
+    border-radius: 2%; */
     width: 100%;
     left: 0;
     padding: 20px;
