--- a/css/category-main.css
+++ b/css/category-main.css
@@ -29,14 +29,15 @@ main{
 }
 .summary-media{
   width: 30%;
-  border-radius: 10px;
+  max-height: 200px;
+  /* border-radius: 10px; */
 }
 .caption{
   display: inline-block;
   width: 100%;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
-  font-weight: 100;
+  font-weight: 500;
   color: #2201f9;
   margin: 10px 50px;
   padding: 10px;
@@ -66,7 +67,7 @@ main{
     margin: 110px auto 10px auto;
   }
 }
-@media (max-width: 769px){
+@media (max-width: 435px){
   #main-container{
     width: 100vw;
     margin: 0;
@@ -76,14 +77,17 @@ main{
     padding: 0;
   }
   .summary{
-    flex-direction: column;
+    flex-direction: column-reverse;
     margin: 20px 0;
     padding: 0;
+  }
+  .summary-media{
+    max-height: 350px;
   }
   .summary .caption{
     padding: 20px;
     font-size: 20px;
-    font-weight: 400;
+    font-weight: 500;
   }
   .summary video{
     width: 100%;
