--- a/css/add-news.css
+++ b/css/add-news.css
@@ -85,7 +85,7 @@ body{
   color: red;
   text-align: center;
   padding: 10px;
-  /* height: 40px; */
+  height: 40px;
 }
 #form-section #form input{
   width: 100%;
