--- a/css/category-main.css
+++ b/css/category-main.css
@@ -17,6 +17,7 @@ main{
   padding: 30px;
   margin: 30px;
   background-color: #2201f91a;
+  cursor: pointer;
 }
 #main-container{
   display: flex;
@@ -30,6 +31,7 @@ main{
 .summary-media{
   width: 30%;
   max-height: 200px;
+  cursor: pointer;
   /* border-radius: 10px; */
 }
 .caption{
@@ -41,6 +43,7 @@ main{
   color: #2201f9;
   margin: 10px 50px;
   padding: 10px;
+  cursor: pointer;
 }
 #summary-link{
   text-decoration: none;
@@ -80,14 +83,18 @@ main{
     flex-direction: column-reverse;
     margin: 20px 0;
     padding: 0;
+    min-height: 50px;
+   
   }
   .summary-media{
     max-height: 350px;
+    cursor: pointer;
   }
   .summary .caption{
     padding: 20px;
     font-size: 20px;
     font-weight: 500;
+    cursor: pointer;
   }
   .summary video{
     width: 100%;
