--- a/css/single-view.css
+++ b/css/single-view.css
@@ -43,8 +43,9 @@ main{
   padding: 50px;
   color: #2201f9;
   font-weight: 100;
-  font-size: 15px;
+  font-size: 16px;
   font-family: Arial, Helvetica, sans-serif;
+  line-height: 1.5;
 }
 .paragraph{
   padding: 10px;
