--- a/css/add-news.css
+++ b/css/add-news.css
@@ -121,12 +121,25 @@ body{
   justify-content: center;
   align-items: center;
 }
+#form-section #media-link{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 #form-section #media label{
   width: 20%;
-  font-size: 1.5rem;
+  font-size: 1.05rem;
+  color: #2201f9;
+}
+#form-section #media-link label{
+  width: 20%;
+  font-size: 1.05rem;
   color: #2201f9;
 }
 #form-section #media input{
+  width: 80%;
+}
+#form-section #media-link input{
   width: 80%;
 }
 #content{
@@ -184,10 +197,19 @@ form #submit-container #add-news-submit{
   #form-section #media{
     flex-direction: column;
   }
+  #form-section #media-link{
+    flex-direction: column;
+  }
   #form-section #media input{
     width: 100%;
   }
+  #form-section #media-link input{
+    width: 100%;
+  }
   #form-section #media label{
+    align-self: flex-start;
+  }
+  #form-section #media-link label{
     align-self: flex-start;
   }
   #checkboxes{
