--- a/css/main.css
+++ b/css/main.css
@@ -99,6 +99,7 @@ a .editors-pick-list:hover{
 }
 .news-card-img{
   max-height: 400px;
+  margin: 0px auto;
 }
 a .featured-list:hover{
   background-color: #2201f9;
@@ -137,6 +138,9 @@ a .featured-list:hover{
   max-height: 300px;
   background-color: #000000;
   margin: 50px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   position: relative;
   text-align: left;
   color: white;
@@ -155,10 +159,18 @@ a .featured-list:hover{
 .category-card-img{
   max-height: 100%;
   max-width: 100%;
+  overflow: hidden;
 }
-.news-card-link{
+.category-card-vid{
+  max-height: 100%;
+  max-width: 100%;
+  overflow: hidden;
+}
+.news{
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .card-link:hover{
   border: #2201f9 solid 1px;
@@ -210,6 +222,9 @@ a .featured-list:hover{
     justify-self: center;
   }
   .category-card-img{
+    max-height: 100%;
+  }
+  .category-card-vid{
     max-height: 100%;
   }
 }
